--- a/examples/client-browser/index.html
+++ b/examples/client-browser/index.html
@@ -3,7 +3,7 @@
 <head>
     <title></title>
     <script type="text/javascript" src="mows.js"></script>
-    <script type="text/javascript" src="secure-client-browser.js"></script>
+    <script type="text/javascript" src="client-browser.js"></script>
 </head>
 <body>
 Demonstration of a MQTT client connecting via Websockets in the browser.<br/>
